Zoo Management/main/default/objects/Animal__c/fields/CageNumber__c.field-meta.xml
<CustomField>
    <fullName>CageNumber__c</fullName>
    <label>CageNumber</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Class__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A-1</fullName>
            </value>
            <value>
                <fullName>A-2</fullName>
            </value>
            <value>
                <fullName>A-3</fullName>
            </value>
            <value>
                <fullName>T-1</fullName>
            </value>
            <value>
                <fullName>T-2</fullName>
            </value>
            <value>
                <fullName>T-3</fullName>
            </value>
            <value>
                <fullName>E-1</fullName>
            </value>
            <value>
                <fullName>E-2</fullName>
            </value>
            <value>
                <fullName>E-3</fullName>
            </value>
            <value>
                <fullName>H-1</fullName>
            </value>
            <value>
                <fullName>H-2</fullName>
            </value>
            <value>
                <fullName>H-3</fullName>
            </value>
            <value>
                <fullName>Z-1</fullName>
            </value>
            <value>
                <fullName>Z-2</fullName>
            </value>
            <value>
                <fullName>Z-3</fullName>
            </value>
            <value>
                <fullName>Extra-1</fullName>
            </value>
            <value>
                <fullName>Extra-2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>