Zoo Management/main/default/objects/Animal__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <label>Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mammal</fullName>
            </value>
            <value>
                <fullName>Amphibian</fullName>
            </value>
            <value>
                <fullName>Fish</fullName>
            </value>
            <value>
                <fullName>Reptiles</fullName>
            </value>
            <value>
                <fullName>Birds</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>