Zoo Management/main/default/objects/Animal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Age__c</columns>
    <columns>AnimalName__c</columns>
    <columns>CageNumber__c</columns>
    <columns>IsAvailable__c</columns>
    <columns>FoodType__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>